objects/DashboardTaskStatus__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Primary_Subject__c</fullName>
        <label>Primary Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Subject__c</fullName>
        <label>Secondary Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Status__c</fullName>
        <label>Task Status</label>
        <type>TextArea</type>
    </fields>
    <label>DashboardTaskStatus</label>
</CustomObject>